# lab1-solutions

./: .gitignore  README.md
.devcontainer/: devcontainer.json
.github/classroom/: autograding.json
src/: exercises.c  exercises.h
tests/: CMakeLists.txt  capture_output.cpp  capture_output.hpp  check_output.cpp  test_fxn.c
tests/IO/: correct_output.txt
